{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 246,
  "lineage": "f473e9d1-551e-b33f-185e-c0c02073a31b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:loadbalancer/app/yec-elevator-test-alb-external/7e212561b64b2abd",
            "arn_suffix": "app/yec-elevator-test-alb-external/7e212561b64b2abd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "yec-elevator-test-alb-external-1529372750.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:loadbalancer/app/yec-elevator-test-alb-external/7e212561b64b2abd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "yec-elevator-test-alb-external",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a9e3ae440cdb65f0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04947c8ab8137674b"
              },
              {
                "subnet_id": "subnet-05606cfcbd613d6d3"
              },
              {
                "subnet_id": "subnet-0efee44fca41e9a8b"
              }
            ],
            "subnets": [
              "subnet-04947c8ab8137674b",
              "subnet-05606cfcbd613d6d3",
              "subnet-0efee44fca41e9a8b"
            ],
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-alb-external",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-alb-external",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "vpc_id": "vpc-090438837e5826cf3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb_external",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:loadbalancer/app/yec-elevator-test-alb-internal/1086121e394877b7",
            "arn_suffix": "app/yec-elevator-test-alb-internal/1086121e394877b7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-yec-elevator-test-alb-internal-252493412.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:loadbalancer/app/yec-elevator-test-alb-internal/1086121e394877b7",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "yec-elevator-test-alb-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-088cb76fc780653ab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-067b755c8ed3fbe2c"
              },
              {
                "subnet_id": "subnet-0ab5444aeab87fecc"
              },
              {
                "subnet_id": "subnet-0db73c2e8cff2af98"
              }
            ],
            "subnets": [
              "subnet-067b755c8ed3fbe2c",
              "subnet-0ab5444aeab87fecc",
              "subnet-0db73c2e8cff2af98"
            ],
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-alb-internal",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-alb-internal",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "vpc_id": "vpc-090438837e5826cf3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb_internal",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:listener/app/yec-elevator-test-alb-external/7e212561b64b2abd/c40b93f74e3088fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:targetgroup/yec-elevator-test-fe-tg/6ce592f84a137f56",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:listener/app/yec-elevator-test-alb-external/7e212561b64b2abd/c40b93f74e3088fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:loadbalancer/app/yec-elevator-test-alb-external/7e212561b64b2abd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.external",
            "module.alb.aws_lb_target_group.fe",
            "module.alb.aws_security_group.alb_external",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:listener/app/yec-elevator-test-alb-internal/1086121e394877b7/1166dda3ed43da00",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:targetgroup/yec-elevator-test-be-int-tg/f314fd86697a7ac8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:listener/app/yec-elevator-test-alb-internal/1086121e394877b7/1166dda3ed43da00",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:loadbalancer/app/yec-elevator-test-alb-internal/1086121e394877b7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.internal",
            "module.alb.aws_lb_target_group.be_internal",
            "module.alb.aws_security_group.alb_internal",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "be_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:targetgroup/yec-elevator-test-be-tg/04b32076a0d0c622",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:listener-rule/app/yec-elevator-test-alb-external/7e212561b64b2abd/c40b93f74e3088fa/e2bbc4464e352a52",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:listener-rule/app/yec-elevator-test-alb-external/7e212561b64b2abd/c40b93f74e3088fa/e2bbc4464e352a52",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:listener/app/yec-elevator-test-alb-external/7e212561b64b2abd/c40b93f74e3088fa",
            "priority": 100,
            "tags": null,
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.external",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.be",
            "module.alb.aws_lb_target_group.fe",
            "module.alb.aws_security_group.alb_external",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "be",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:targetgroup/yec-elevator-test-be-tg/04b32076a0d0c622",
            "arn_suffix": "targetgroup/yec-elevator-test-be-tg/04b32076a0d0c622",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/api/docs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:targetgroup/yec-elevator-test-be-tg/04b32076a0d0c622",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "yec-elevator-test-be-tg",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Component": "be",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-be-tg",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Component": "be",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-be-tg",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "be_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:targetgroup/yec-elevator-test-be-int-tg/f314fd86697a7ac8",
            "arn_suffix": "targetgroup/yec-elevator-test-be-int-tg/f314fd86697a7ac8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/api/docs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:targetgroup/yec-elevator-test-be-int-tg/f314fd86697a7ac8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "yec-elevator-test-be-int-tg",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Component": "be",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-be-int-tg",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Component": "be",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-be-int-tg",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:targetgroup/yec-elevator-test-fe-tg/6ce592f84a137f56",
            "arn_suffix": "targetgroup/yec-elevator-test-fe-tg/6ce592f84a137f56",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:495113986501:targetgroup/yec-elevator-test-fe-tg/6ce592f84a137f56",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "yec-elevator-test-fe-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Component": "fe",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-fe-tg",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Component": "fe",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-fe-tg",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:security-group/sg-0a9e3ae440cdb65f0",
            "description": "Public ALB ingress",
            "egress": [],
            "id": "sg-0a9e3ae440cdb65f0",
            "ingress": [],
            "name": "yec-elevator-test-alb-external",
            "name_prefix": "",
            "owner_id": "495113986501",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-alb-external",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-alb-external",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "timeouts": null,
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:security-group/sg-088cb76fc780653ab",
            "description": "Internal ALB ingress (from within VPC)",
            "egress": [],
            "id": "sg-088cb76fc780653ab",
            "ingress": [],
            "name": "yec-elevator-test-alb-internal",
            "name_prefix": "",
            "owner_id": "495113986501",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-alb-internal",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-alb-internal",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "timeouts": null,
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ext_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1567402304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a9e3ae440cdb65f0",
            "security_group_rule_id": "sgr-03763b90596a5debf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb_external",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ext_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3218658352",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a9e3ae440cdb65f0",
            "security_group_rule_id": "sgr-05d8d7ff8f8434d9c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb_external",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ext_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-4175166740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a9e3ae440cdb65f0",
            "security_group_rule_id": "sgr-0d470ceb76b98767b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb_external",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_int_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-744451900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-088cb76fc780653ab",
            "security_group_rule_id": "sgr-00de65fa1284e4458",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb_internal",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_int_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.70.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3608301066",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-088cb76fc780653ab",
            "security_group_rule_id": "sgr-038c7413da1030960",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb_internal",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_be",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:security-group/sg-09e35abc85c064c42",
            "description": "be ECS task - ingress from ALB only",
            "egress": [],
            "id": "sg-09e35abc85c064c42",
            "ingress": [],
            "name": "yec-elevator-test-be-task",
            "name_prefix": "",
            "owner_id": "495113986501",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "be",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-be-task",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Component": "be",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-be-task",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "timeouts": null,
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_be",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "From ALB",
            "from_port": 3001,
            "id": "sgrule-3268870020",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09e35abc85c064c42",
            "security_group_rule_id": "sgr-0f8fec8a95c774d85",
            "self": false,
            "source_security_group_id": "sg-0a9e3ae440cdb65f0",
            "timeouts": null,
            "to_port": 3001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb_external",
            "module.ecs_be.aws_security_group.task",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_be",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "task_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2102938740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09e35abc85c064c42",
            "security_group_rule_id": "sgr-0d8317a4ed310a9b8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs_be.aws_security_group.task",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fe",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:security-group/sg-03055ceecec033636",
            "description": "fe ECS task - ingress from ALB only",
            "egress": [],
            "id": "sg-03055ceecec033636",
            "ingress": [],
            "name": "yec-elevator-test-fe-task",
            "name_prefix": "",
            "owner_id": "495113986501",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "fe",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-fe-task",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Component": "fe",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-fe-task",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "timeouts": null,
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fe",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "From ALB",
            "from_port": 3000,
            "id": "sgrule-1698715496",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03055ceecec033636",
            "security_group_rule_id": "sgr-0d5576f42e4010da6",
            "self": false,
            "source_security_group_id": "sg-0a9e3ae440cdb65f0",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb_external",
            "module.ecs_fe.aws_security_group.task",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fe",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "task_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1204314624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03055ceecec033636",
            "security_group_rule_id": "sgr-0575aac8eb4214c82",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs_fe.aws_security_group.task",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:security-group/sg-0c9daeabbbe387d90",
            "description": "Postgres access for yec-elevator-test",
            "egress": [],
            "id": "sg-0c9daeabbbe387d90",
            "ingress": [],
            "name": "yec-elevator-test-rds",
            "name_prefix": "",
            "owner_id": "495113986501",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-rds",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-rds",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "timeouts": null,
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Postgres from app task SG",
            "from_port": 5432,
            "id": "sgrule-47096900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9daeabbbe387d90",
            "security_group_rule_id": "sgr-089374a180a6affde",
            "self": false,
            "source_security_group_id": "sg-09e35abc85c064c42",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs_be.aws_security_group.task",
            "module.ecs_fe.aws_security_group.task",
            "module.rds.aws_security_group.db",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Postgres from app task SG",
            "from_port": 5432,
            "id": "sgrule-1238920406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9daeabbbe387d90",
            "security_group_rule_id": "sgr-04bc5da133eadd792",
            "self": false,
            "source_security_group_id": "sg-03055ceecec033636",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs_be.aws_security_group.task",
            "module.ecs_fe.aws_security_group.task",
            "module.rds.aws_security_group.db",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049aec29ee641d159",
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:elastic-ip/eipalloc-049aec29ee641d159",
            "domain": "vpc",
            "id": "eipalloc-049aec29ee641d159",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-77-9-232.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.9.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-nat-eip-0",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-nat-eip-0",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:internet-gateway/igw-04b7a7dd32c1abf71",
            "id": "igw-04b7a7dd32c1abf71",
            "owner_id": "495113986501",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-igw",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-igw",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049aec29ee641d159",
            "association_id": "eipassoc-007bbd7b143f0b126",
            "connectivity_type": "public",
            "id": "nat-099696ce8565fe745",
            "network_interface_id": "eni-06a8a2f1d7cac7d53",
            "private_ip": "10.70.1.192",
            "public_ip": "52.77.9.232",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0efee44fca41e9a8b",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-nat-0",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-nat-0",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-000254d97347c808e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-099696ce8565fe745",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-000254d97347c808e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe5b858d1a7b46951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-099696ce8565fe745",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe5b858d1a7b4695",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e9268936061121a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-099696ce8565fe745",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e9268936061121a3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04b7a7dd32c1abf71",
            "id": "r-rtb-072ce4383ea30309f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-072ce4383ea30309f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:route-table/rtb-000254d97347c808e",
            "id": "rtb-000254d97347c808e",
            "owner_id": "495113986501",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-rt-0",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-rt-0",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "timeouts": null,
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:route-table/rtb-0fe5b858d1a7b4695",
            "id": "rtb-0fe5b858d1a7b4695",
            "owner_id": "495113986501",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-rt-1",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-rt-1",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "timeouts": null,
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:route-table/rtb-0e9268936061121a3",
            "id": "rtb-0e9268936061121a3",
            "owner_id": "495113986501",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-rt-2",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-rt-2",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "timeouts": null,
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:route-table/rtb-072ce4383ea30309f",
            "id": "rtb-072ce4383ea30309f",
            "owner_id": "495113986501",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-public-rt",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-public-rt",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "timeouts": null,
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008e334265e614cb3",
            "route_table_id": "rtb-000254d97347c808e",
            "subnet_id": "subnet-06dbb291fd19e2156"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b4b5bda64bdc26c",
            "route_table_id": "rtb-0fe5b858d1a7b4695",
            "subnet_id": "subnet-0dde2d7edc02a5316"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0008747ed907e7c22",
            "route_table_id": "rtb-0e9268936061121a3",
            "subnet_id": "subnet-012528ea157923a80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aefd795dde7f4a73",
            "route_table_id": "rtb-000254d97347c808e",
            "subnet_id": "subnet-067b755c8ed3fbe2c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016510f4160a0f2db",
            "route_table_id": "rtb-0fe5b858d1a7b4695",
            "subnet_id": "subnet-0ab5444aeab87fecc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090931a7d99ffb473",
            "route_table_id": "rtb-0e9268936061121a3",
            "subnet_id": "subnet-0db73c2e8cff2af98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05faba071f00d5313",
            "route_table_id": "rtb-072ce4383ea30309f",
            "subnet_id": "subnet-0efee44fca41e9a8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7ef084fe52dc11b",
            "route_table_id": "rtb-072ce4383ea30309f",
            "subnet_id": "subnet-04947c8ab8137674b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caba064f109616c8",
            "route_table_id": "rtb-072ce4383ea30309f",
            "subnet_id": "subnet-05606cfcbd613d6d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:subnet/subnet-06dbb291fd19e2156",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.70.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dbb291fd19e2156",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495113986501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-db-ap-southeast-1a",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-db-ap-southeast-1a",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "db"
            },
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:subnet/subnet-0dde2d7edc02a5316",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.70.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dde2d7edc02a5316",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495113986501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-db-ap-southeast-1b",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-db-ap-southeast-1b",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "db"
            },
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:subnet/subnet-012528ea157923a80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.70.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012528ea157923a80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495113986501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-db-ap-southeast-1c",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-db-ap-southeast-1c",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "db"
            },
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:subnet/subnet-067b755c8ed3fbe2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.70.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067b755c8ed3fbe2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495113986501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-ap-southeast-1a",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-ap-southeast-1a",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "private"
            },
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:subnet/subnet-0ab5444aeab87fecc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.70.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab5444aeab87fecc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495113986501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-ap-southeast-1b",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-ap-southeast-1b",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "private"
            },
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:subnet/subnet-0db73c2e8cff2af98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.70.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db73c2e8cff2af98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495113986501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-ap-southeast-1c",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-private-ap-southeast-1c",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "private"
            },
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:subnet/subnet-0efee44fca41e9a8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.70.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efee44fca41e9a8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495113986501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-public-ap-southeast-1a",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-public-ap-southeast-1a",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "public"
            },
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:subnet/subnet-04947c8ab8137674b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.70.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04947c8ab8137674b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495113986501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-public-ap-southeast-1b",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-public-ap-southeast-1b",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "public"
            },
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:subnet/subnet-05606cfcbd613d6d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.70.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05606cfcbd613d6d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495113986501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-public-ap-southeast-1c",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-public-ap-southeast-1c",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator",
              "Tier": "public"
            },
            "vpc_id": "vpc-090438837e5826cf3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:495113986501:vpc/vpc-090438837e5826cf3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.70.0.0/16",
            "default_network_acl_id": "acl-05c7e54edcf358636",
            "default_route_table_id": "rtb-0c70e4b36fe320fb2",
            "default_security_group_id": "sg-060e1348d328903b6",
            "dhcp_options_id": "dopt-6a4d820c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090438837e5826cf3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c70e4b36fe320fb2",
            "owner_id": "495113986501",
            "tags": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-vpc",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "yec-elevator-test-vpc",
              "Project": "yec-elevator",
              "Sub-Tag": "Yoma Elevator"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}